--- a/Team930Scouting/WEARs/src/main/res/layout/activity_pre_match.xml
+++ b/Team930Scouting/WEARs/src/main/res/layout/activity_pre_match.xml
@@ -13,7 +13,6 @@
         android:layout_marginEnd="80dp"
         android:adjustViewBounds="true"
         android:scaleType="fitXY"
-        app:layout_constraintBottom_toTopOf="@+id/teamNum"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -86,6 +85,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <org.team930.bears.wears.PictureView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="1dp"
+        app:label="Layout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        app:source="@drawable/s0" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
