--- a/Team930Scouting/WEARs/src/main/res/values/colors.xml
+++ b/Team930Scouting/WEARs/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccentTwo">#FBDB65</color>
     <color name="colorAccentThree">#4298B5</color>
     <color name="colorDarkBlue">#071D49</color>
+    <color name ="colorRoyalBlue">#1E22AA</color>
     <color name="colorBlack">#101820</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorBackground">#d6d6d6</color>
