--- a/Team930Scouting/WEARs/src/main/res/layout/activity_post_match.xml
+++ b/Team930Scouting/WEARs/src/main/res/layout/activity_post_match.xml
@@ -1,267 +1,139 @@
 <?xml version="1.0" encoding="utf-8"?><!--suppress XmlUnusedNamespaceDeclaration, XmlUnusedNamespaceDeclaration -->
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBackground"
     android:screenOrientation="portrait"
     tools:ignore="Overdraw">
 
-    <ScrollView
+    <org.team930.bears.wears.LabelView
+        android:id="@+id/pGeneralLabel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        tools:ignore="UselessParent">
+        app:center="true"
+        app:label="General"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="2dp"
-            android:layout_marginRight="2dp"
-            android:background="@color/colorBackground"
-            android:orientation="vertical">
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/pGuide50"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintGuide_percent="0.5"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent" />
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:background="@color/colorBackground"
-                android:paddingLeft="8dp"
-                android:paddingTop="4dp"
-                android:text="Post Match"
-                android:textSize="30dp"
-                tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry,SpUsage" />
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/pGuide66"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent=".66" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/rounded_corners_chunk_material"
-                android:orientation="horizontal"
-                android:paddingBottom="10dp"
-                android:paddingLeft="11dp"
-                android:paddingRight="4dp"
-                android:paddingTop="10dp"
-                tools:ignore="RtlHardcoded">
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/pGuide33"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="230dp" />
 
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="fill_parent"
-                    android:layout_gravity="center"
-                    android:layout_marginRight="8dp"
-                    android:layout_weight=".7"
-                    android:background="@color/colorWhite"
-                    android:maxLines="1"
-                    android:padding="5dp"
-                    android:text="Match Result"
-                    android:textColor="@color/textMedium"
-                    android:textSize="30dp"
-                    android:textStyle="italic"
+    <org.team930.bears.wears.SeekbarView
+        android:id="@+id/pPassingEffectiveness"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        app:ceil="5"
+        app:ceil_name="5 (Super Gud)"
+        app:floor_name="1 (Mega Boujee)"
+        app:label="Passing Effectiveness"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/pGeneralLabel"
+        app:zero_name="N/A" />
 
-                    tools:ignore="HardcodedText,RtlHardcoded,SpUsage" />
+    <org.team930.bears.wears.ToggleView
+        android:id="@+id/pPassedTo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:label="Were They Passed To?"
+        app:layout_constraintTop_toBottomOf="@+id/pPassingEffectiveness"
+        tools:layout_editor_absoluteX="-16dp" />
 
-                <ToggleButton
-                    android:layout_width="0dp"
-                    android:layout_height="fill_parent"
-                    android:layout_weight=".3"
-                    android:background="@drawable/toggle_button_winloss"
-                    android:checked="true"
-                    android:textColor="@color/colorWhite"
-                    android:textOff="Loss"
-                    android:textOn="Win"
-                    tools:ignore="HardcodedText" />
+    <org.team930.bears.wears.SeekbarView
+        android:id="@+id/pBarCrossing"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        app:ceil="5"
+        app:ceil_name="5 (Not Affected By Bar)"
+        app:floor_name="1 (Big Struggle Mode)"
+        app:label="Boundary Line Crossing"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/pPassedTo"
+        app:zero_name="N/A" />
 
+    <org.team930.bears.wears.TextboxView
+        android:id="@+id/pSecondsDisabled"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        app:label="# Seconds Disabled"
+        app:label_location="side"
+        app:layout_constraintEnd_toStartOf="@+id/pGuide50"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/pBarCrossing" />
 
-            </LinearLayout> <!--Match Result-->
+    <org.team930.bears.wears.TextboxView
+        android:id="@+id/pReasonDisabled"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        app:label="# Seconds Disabled"
+        app:label_location="side"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/pGuide50"
+        app:layout_constraintTop_toBottomOf="@+id/pBarCrossing" />
 
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/colorBackground"
-                tools:ignore="ContentDescription" />
+    <org.team930.bears.wears.ToggleView
+        android:id="@+id/pGettingInTheWay"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        app:label="Getting in the way of partners?"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/pReasonDisabled" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/rounded_corners_chunk_material"
-                android:orientation="horizontal"
-                android:paddingBottom="10dp"
-                android:paddingLeft="11dp"
-                android:paddingRight="4dp"
-                android:paddingTop="10dp"
-                tools:ignore="RtlHardcoded">
+    <org.team930.bears.wears.LabelView
+        android:id="@+id/pDefenseLabel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        app:center="true"
+        app:label="Defense"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/pGettingInTheWay" />
 
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="fill_parent"
-                    android:layout_gravity="center"
-                    android:layout_marginRight="8dp"
-                    android:layout_weight=".7"
-                    android:background="@color/colorWhite"
-                    android:maxLines="1"
-                    android:padding="5dp"
-                    android:text="Disabled"
-                    android:textColor="@color/textMedium"
-                    android:textSize="30dp"
-                    android:textStyle="italic"
+    <org.team930.bears.wears.SeekbarView
+        android:id="@+id/pGettingDefended"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        app:ceil="5"
+        app:ceil_name="5 (Didn't affect them)"
+        app:floor_name="1 (Got Shut Down)"
+        app:label="Effectiveness Against Defense"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/pDefenseLabel"
+        app:zero_name="N/A" />
 
-                    tools:ignore="HardcodedText,RtlHardcoded,SpUsage" />
-
-                <ToggleButton
-                    android:id="@+id/disabled"
-                    android:layout_width="0dp"
-                    android:layout_height="fill_parent"
-                    android:layout_weight=".3"
-                    android:onClick="setDisabled"
-                    android:textColor="@color/colorWhite"
-                    android:textOff="Not Disabled"
-                    android:textOn="Disabled"
-
-                    tools:ignore="HardcodedText" />
-
-            </LinearLayout> <!--Disabled-->
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/colorBackground"
-                tools:ignore="ContentDescription" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/rounded_corners_chunk_material"
-                android:orientation="vertical"
-                android:paddingBottom="10dp"
-                android:paddingLeft="11dp"
-                android:paddingRight="4dp"
-                android:paddingTop="10dp"
-                tools:ignore="RtlHardcoded">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_gravity="center"
-                    android:layout_marginRight="8dp"
-                    android:layout_weight=".7"
-                    android:background="@color/colorWhite"
-                    android:maxLines="1"
-                    android:paddingLeft="11dp"
-                    android:paddingRight="5dp"
-                    android:text="Defense"
-                    android:textColor="@color/textMedium"
-                    android:textSize="30dp"
-                    android:textStyle="italic"
-
-                    tools:ignore="HardcodedText,RtlHardcoded,SpUsage" />
-
-                <TextView
-                    android:id="@+id/progress"
-                    android:layout_width="80dp"
-                    android:layout_height="wrap_content"
-                    android:text="0"
-                    android:textSize="25dp"
-                    tools:ignore="HardcodedText,SpUsage" />
-
-                <SeekBar
-                    android:id="@+id/defense"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:max="5"
-                    android:padding="8dp"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginRight="8dp"
-                    tools:ignore="HardcodedText" />
-
-            </LinearLayout> <!--Defense-->
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/colorBackground"
-                tools:ignore="ContentDescription" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/rounded_corners_chunk_material"
-                android:orientation="vertical"
-                android:paddingBottom="10dp"
-                android:paddingLeft="11dp"
-                android:paddingRight="4dp"
-                android:paddingTop="10dp"
-                tools:ignore="RtlHardcoded">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_gravity="center"
-                    android:layout_marginRight="8dp"
-                    android:layout_weight=".7"
-                    android:background="@color/colorWhite"
-                    android:maxLines="1"
-                    android:paddingLeft="11dp"
-                    android:paddingRight="5dp"
-                    android:text="Comments"
-                    android:textColor="@color/textMedium"
-                    android:textSize="30dp"
-                    android:textStyle="italic"
-
-                    tools:ignore="HardcodedText,RtlHardcoded,SpUsage" />
-
-                <EditText
-                    android:id="@+id/comments"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890./#)(: "
-                    android:hint="Very fast, bad drivers, aligns fast for hatches, how long they were disabled, a nice haiku, etc."
-                    android:maxLength="300"
-                    android:maxLines="4"
-                    android:textSize="15dp"
-                    android:inputType="text"
-                    android:padding="8dp"
-                    tools:ignore="HardcodedText,SpUsage" />
-
-            </LinearLayout> <!--Comments-->
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="16dp"
-                android:background="@color/colorBackground"
-                tools:ignore="ContentDescription" />
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center|bottom"
-                android:orientation="vertical">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/rounded_corners_chunk_material"
-                    android:orientation="vertical"
-                    android:paddingBottom="10dp"
-                    android:paddingLeft="4dp"
-                    android:paddingRight="4dp"
-                    android:paddingTop="10dp">
-
-                    <Button
-                        android:id="@+id/submitData"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@color/colorBase"
-                        android:onClick="setSubmitData"
-                        android:text="Submit Data"
-                        android:textColor="@color/colorWhite"
-                        tools:ignore="HardcodedText" />
-                </LinearLayout>
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="8dp"
-                    tools:ignore="ContentDescription" />
-
-            </LinearLayout> <!--Next-->
-
-        </LinearLayout>
-    </ScrollView>
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
