--- a/Team930Scouting/WEARs/src/main/res/values/styles.xml
+++ b/Team930Scouting/WEARs/src/main/res/values/styles.xml
@@ -3,7 +3,7 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Base.Theme.AppCompat.Light">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorDarkBlue</item>
+        <item name="colorPrimary">@color/colorRoyalBlue</item>
         <item name="colorPrimaryDark">@color/colorDarkBlue</item>
         <item name="colorAccent">@color/colorAccentOne</item>
         <item name="android:colorBackground">@color/colorBackground</item>
@@ -34,7 +34,7 @@
 
     <style name="plusButtonStyle" parent="AppTheme">
         <item name="android:background">@drawable/ic_add_white_24dp</item>
-        <item name="android:tint">@color/colorBase</item>
+        <item name="android:tint">@color/colorDarkBlue</item>
 
     </style>
 
